--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,70 +4,70 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:HGpFP2aOAwX3tDBv,iv:w6wRFXKsO0QthUErZUXd3dWWwzWZbKRUISUA+1sPwM8=,tag:98OoUCqYMF2ILc1G4fKn/g==,type:comment]
-    PROXMOX_IP: ENC[AES256_GCM,data:Xoil1byvDVtI1OA=,iv:qTuXIOexZ+e2e3tmF+/Mm1Zz04dxXODfvpdDnxWknWo=,tag:bI+l/FCCy6VixiQNN/Wu5A==,type:str]
-    VIP: ENC[AES256_GCM,data:mlEjYbEXO/7JvyE=,iv:eRGksGbyFc5iO//hInEzjJjWBUNiIKxSVB7nuUJ2ZOc=,tag:Sh2Rc5jUy+pdBh0aMjQl/A==,type:str]
-    MASTER1IP: ENC[AES256_GCM,data:BHI8RHq6n2lIVjk=,iv:Fs2S2hBUE4oGPQkaOXQSaiNUrQqwwn8sSDB8CXxZQB0=,tag:53ZoMMGoIp+ez+PHdPO5jw==,type:str]
-    GATEWAY: ENC[AES256_GCM,data:Cp2NfL2sMIEG7Q==,iv:FEnk7D4FsR65dKpfGB9aSh8bC7nR3obOD7Ct3tl8wWY=,tag:ReV8bSqK/+jDahIwIjKRWw==,type:str]
-    #ENC[AES256_GCM,data:yBrQ43RUQlRopMCJ4bL9,iv:1BgJWUXgt2ZnHwTKR3CJaiZz6Of4mOMs9UGxLyf5fhA=,tag:q0JzAE1xPozF4BgRpTr+Iw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:h7zk7wIt3qCjJmFobbfKi/AwcOc7QmsV5w==,iv:ZdE7PhCJj7kRiqRK17v8gTtYW6zIR9gzlVW4PTtBSAI=,tag:wVOvW5DUIdaYW1tDdqJ5Lg==,type:str]
-    #ENC[AES256_GCM,data:7ZUtuWRhbNm9nDb/of4q/0l7KHZdQTNqdw==,iv:E1npHJ1FCcpXGrut+3yaPokElf39TDWfCqvYWSPh3S8=,tag:zRkpUdryGy9L+UWIK7IUKQ==,type:comment]
-    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:izcu8lsiA65rjOqy,iv:zYgKxOmezpcdH2+wWla5uVc7thkwfULKU39w8zVtvA8=,tag:i+eUv290LQ/OmVVypBa2sA==,type:str]
-    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:vlcQItxwz/2XaljP,iv:AL6YnrQN8CUyb8ev40GQMc6/biU7SbHOgBKul9Gdwg4=,tag:5jAKVz3+kyS+WnPS2LG+1g==,type:str]
-    IP_WHITELIST: ENC[AES256_GCM,data:OCrI8V+l9jCXnat3foEo7fN88DvMW48B3+Q=,iv:fCPvvNJbbukscQSpX8tdge8Kaz/rYU19yBWAjVGnbc0=,tag:x9nYueohs8V+po4bwcWpLA==,type:str]
-    BLOCKY_IP: ENC[AES256_GCM,data:l8OgPnoQQLxAjzRh,iv:VX67EMlDmCKavPYETwWv4kI3KIPqla3oP4FVnQwPjU4=,tag:wbdlvovSPs/p3Ed6nbTztA==,type:str]
-    DASHBOARD_IP: ENC[AES256_GCM,data:yxRt9YoWTLsI+kUL,iv:pdYPWcy7g/bIRfowemNxtJwNfuhvXhAfAbWLXFzi5G0=,tag:BT3l4dkcAPHslFsNFOfk1g==,type:str]
-    WG_EASY_IP: ENC[AES256_GCM,data:OzUfQ3IliOV/QVW8,iv:iwQpzL6EufRkVkm0glNqYGoxBu8ftxQA1W1Xpur8GEw=,tag:QQsUW8Cuc/nE5leyXF6vWw==,type:str]
-    MINECRAFT_IP: ENC[AES256_GCM,data:k+zVeXqIVM77aRzS,iv:dFYM/9fwdonlrDtAO2qZ4Q2MnIc/p60soGKlXvI58sM=,tag:LppjPsOPGtwQC07b+uMUXQ==,type:str]
-    #ENC[AES256_GCM,data:RHR12Mrrnhd8qcax2FrAWjDZ,iv:biZSSOtJdLch9xjq19Rf9w7hE+xCHjyWWgzOxm/9oTk=,tag:tphxqXkhWxuFkUiixfn+Vg==,type:comment]
-    BOREALIS_IP: ENC[AES256_GCM,data:NRrVmvdBAPcOG0o=,iv:W58kP6qSkK+wspKZ5TRU7Ci801cWMxEvMlETgKETEAQ=,tag:XixaCqKYGKQ1xfaDgYoIww==,type:str]
-    #ENC[AES256_GCM,data:0MKeYBiMgSib6GmBj2gT2w==,iv:w8UUbKzilTSiulCDp4fF3LIs+CghP7lqJA0FBnd/lU4=,tag:NFmuzKIKSK9RCXCWPpTlaw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:u4cSF2rRZzHDJfWXeA==,iv:urXyAy8f7MsirO02fS5Ywc+zfbWeXXkrcShryhd6AQU=,tag:UwJ5yrAKqkIiDqq5W/Cl4g==,type:str]
-    DDNS_URL: ENC[AES256_GCM,data:Hb03BRVK01PCVFazbA+5l+7nGMs=,iv:zysggIF36NCuBIP313803Kn37Rzjj3hWFIv6FDCuOdQ=,tag:0VFiVJBtkXEDrdGoMD2ZEA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:5nHKDZi/EszcVbGU+1eVhWYI2Q==,iv:CrNhw8K/oUxMY8WNenGHefTw2H/xfGbsd24UNz0LiH4=,tag:DbMZXyZ8638gwS8YKPSvjQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:B2QOQyDDcyEtB8TgIwIId+pPMHysPFgl+oLprPXpqgDXEnUIZ8ifWg==,iv:mwMzt6UCL4CLtb7ZGBy3Xvbf74Z+lVo6pAng/oAU6qU=,tag:uvu96/rkmk8dLBmXb57GUQ==,type:str]
-    ZONE_ID: ENC[AES256_GCM,data:QJ3+6jt//6ZQY9iZXSqmFHO19ZKGMvBZGE5Pi1QYr+4=,iv:V42ovGud0x3eNFZ1ho1egyFPdZb5EXX8KIjnF+mTwRY=,tag:iGhROuXUVYTiRcrds5FKZw==,type:str]
-    #ENC[AES256_GCM,data:91m/I7BFa1w=,iv:ou1TsgRy3F7gf0Wio8gd5JemIC+AWATYgTcTQOsqO0U=,tag:I/XMYgbd2ljbZPmRlgx2Zw==,type:comment]
-    GF_ADMIN: ENC[AES256_GCM,data:FTIHNAARkTp7,iv:NNy72j5xNhkoECRC2YtMVUmAJhwPLuNAtfruzhwAhUA=,tag:52Km5mj1sPDV6/ZMOksBhA==,type:str]
-    GF_PWD: ENC[AES256_GCM,data:9BrG+zydoLo0bfaZjhRmAF9yT5XJJQ4b,iv:WuOwLDCBeS9ZyKqF9Wb/VOzqUdg/jVPgqspdcA1EWoQ=,tag:Y8Yt5wsnWqva7SyYjMDPMw==,type:str]
-    #ENC[AES256_GCM,data:j1/TqpfY4Zj4Gw==,iv:0hQHrKCP8bh5j8NRZ4zbGVTQEzBpz0rnK0zzTW/5vpk=,tag:AnSYbmr29qrKV2A/JhUUxw==,type:comment]
-    NEXTCLOUD_USER: ENC[AES256_GCM,data:zvI32o5Kdw6E,iv:HjSWcIkVLlQJxplcqEuCR4Y8c+dnsQU40LJmvtZ8UCk=,tag:hc1jdQYsk6xeyCP4b28vqA==,type:str]
-    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:GkXMoHx2vjh+TrP3LShFzcRi6J4=,iv:NVpS/pugcR49a6mVtVmQ6sVXaY0PZRhbb1iY6DwL/o0=,tag:2X7hzND1Z3FeIG+uioYmNg==,type:str]
-    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:HJ36qnICc/1CC+FRPVWOe5fkSpO3kQjF,iv:8NH+qK1b8S9bKQQ1LJydZJr+uJ/ObYGH/hhKD9iL7zU=,tag:TxJ90ehTaTSpWBY1pfAMaA==,type:str]
-    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:THdznbk05ZCtY9rk0u59zxk/4A==,iv:a0sy5y1WUVUa2UCmszHpr7l1w22Bc/WXKV0qsfu4yBY=,tag:XTmzHGnypq7NZ9riK7gZ0g==,type:str]
-    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:9hZdZkCtSBKZWiq7Nlz461Ek,iv:pcUTIVqxd/mEZ4cexLc3NK6+MgAyaOazvXzpYJ1uETs=,tag:TNUTQk0EfiBskBwV62hQSw==,type:str]
-    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:77Ocoqh71Y5yWjnjgG6Dfq13RzajnoM=,iv:mvu7QMcdmEVnTi0h+1ZhuKtw5xmGpdvWBEyx4A7okJk=,tag:Hamjxdp43b/u7+ZEwCKEDg==,type:str]
-    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:kbpplT1Fo0cYFzU5MWWKspN1Yz/deoT2,iv:x69f7u18ol37hpFNEkcZMYrtlix8i1jDIltKvT1MyiY=,tag:p2hHMYqFHYkcb2ROPgMUyw==,type:str]
-    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:XoqSwJTTjjG6bGYrLmJ84u0WLxnDk4i1,iv:jff5R2dllghzbe8gLSvD9uh6XfP6N+fXKimHxchbecY=,tag:upIPW18qV9ORA74C5MBMiQ==,type:str]
-    #ENC[AES256_GCM,data:sasiNQv0Slsu82JT4dDlTXA=,iv:EcymVbdaKZSMM3YueOTme40sGPIbDYRIoBqFlyTg77E=,tag:aWPpMPfIHEY5nO+SokzrDg==,type:comment]
-    METUBE_NFS_PATH: ENC[AES256_GCM,data:l8C8ILPqSnYKoRm62JUS4eXX8yqqu69ihtw=,iv:YrODmpOpXgZfFzdgTqN3V36FiDXpVtyWiSx43iNtuBA=,tag:4DtrWnZCsXZ10pnr7f7eiw==,type:str]
-    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:WjAwF1Qo5xXNud7gXqebjGUBeVRf1x0ZTFJq6I3DYXQGJOIzVqJh,iv:ST1gLq8u3cHIwvgY3M3VH8leHJZvXvo8NUa/GRBaR2g=,tag:/xQggOJ2t4P9at/jG00Zxg==,type:str]
-    OZRATES_NFS_PATH: ENC[AES256_GCM,data:h7Nm5YQJSqVGhXMfSMFiRGGEpPXT89uqZnKXdg0=,iv:NLBn0c/vFgoZgxeCKG2YqlVQTgE3hXWZ0WDsSAM1nNE=,tag:vzpolqxD1CpP8FEpsOe/aA==,type:str]
-    #ENC[AES256_GCM,data:J/8nQD60dV/FM3h/fAQUB2yHvesXxKRl9vXHG27Zg2afZVVk9k9+6qGZgSMTJelZU3qD2+aS8cU=,iv:AGapT7qIs/DTT8bNN1KeM6I2yxsrqtNC/pa8Si4uab4=,tag:n1ygqp6gvgfu6wiKV87Z5g==,type:comment]
-    #ENC[AES256_GCM,data:J4bk1xiZUWbsaC6rxxDZxI0NoKbS3PdMzw==,iv:9U6jZc7B11dKOWleRedmP4sFvVEa+a0OJzVPpfXhEJ8=,tag:71hz4wkvHwvkVfWgH8UgXQ==,type:comment]
-    #ENC[AES256_GCM,data:5I1btSBVijUSnI4kadkLHoVKbIMh+7/+SwHYPiLcHGIAxAL1xf+BkqPf74uP4PBHKDHca8UlBKMpdcT+L1KvSk1HBkemY1h2CKsoCkw=,iv:wqt4+yb1VYf94sVouaEzLobIliD8ghT8axhs5Pue/QQ=,tag:uxRWBW7VNWuPD2ID8/eHjg==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:NB2Wj5Hvatkqw8OROxB3k1mHMpMoTwxvAANMuokTeW34HQh+rVQbvWNwDw==,iv:/wbPjBgjFusENK3M1fjgEqkjWECdw1OQnHFTW1kczJw=,tag:a1C3zp9qffOVsxZS/AGivQ==,type:str]
-    #ENC[AES256_GCM,data:WIR2TxcHeTAr6yxZw3kyNBZqVa/D4wqmP9DW8Po6hDAtEmekd8uGb7JovN4A5e4HR1OKm9jCBb3aND1Ewvf0LwddbKSkS9E=,iv:yv56IqNutfnyuEgJwaxzM4bVWwstml84LEAYJB1KwNU=,tag:8p+45Uned+xpUFrYv6jh8A==,type:comment]
-    #ENC[AES256_GCM,data:M0L3RqjADp0M7L4isFdaGCqL9zvfgKtZzzg2g1+s1ve30tEOvI44tYETozzdCNMX82KLvosY,iv:H63TQcR+buRPKwSYkpZ/oPd2pvuuc5+6sBu//Sf/7k0=,tag:X+YWJjpjNuMkMAAs1bDvdA==,type:comment]
-    #ENC[AES256_GCM,data:cOzoxyiVbKyj6BO1cQx9Ji2kGcQ5fZT+AeSp7tUh9kSf1Vo=,iv:72iBo3ymnBwPcpTV6OTMALnZawP2dnoZ1QBuzupIPIc=,tag:D42KFR7p8JUIxvU18NVUqA==,type:comment]
-    #ENC[AES256_GCM,data:tuXMqpL3Ba61cnr/mr+J1Wv/K2u1Jd0/NBJXHNt7n6l6uOdgFEGv,iv:/e19adVNaNwbjpAo4xcJWMnZaRkPvPRGWbZEiqN6qQs=,tag:KooNBJEg5BjF8ghTl+nKOA==,type:comment]
-    #ENC[AES256_GCM,data:Nh12hVseu3O8upqZJtI=,iv:iyCMuxXfUIJCGd+hlmXpn2Cv9pmrFVRgRBo0AaIYpnM=,tag:Wlys/XtTzI91Dnk8Bbvvhw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:Q1PByodGz+byMUKzHQ==,iv:O46E1MpMm/NM9EEhFQ1+4x+e6bw0ZWGZ80ETxPYwPag=,tag:HhMD/jYN0IB1CylcAahCnQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:Kfpg8P8i7rirQI/qTQ==,iv:Ht2pJWEzZn5WFq8wQzY0ICm2EhSH47GGh7twJ11NcD4=,tag:uEUdora7ISygSN4fL5DOVA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:lF8eMw==,iv:NLENovX3jQUlNnfNYt+8gNBXhCBDnPSdtVSJSnxoVrE=,tag:cbSvvEBujLMVukdtUeOIAQ==,type:str]
+    #ENC[AES256_GCM,data:v/o+kWDBt0BZi6rt,iv:xSfs0g/pUt/gIuj921KpczfxRNwZYKXh7eCCfxq+l90=,tag:fY70K8oGeyoIuE/iGX6LDw==,type:comment]
+    PROXMOX_IP: ENC[AES256_GCM,data:5TwYzRdJa9Rgpg0=,iv:83muWZcZXOhQZGkeagXj3aVfbaKLcRwVgEfODnsdmNU=,tag:tg+J64k3juLoWTD91lGxQg==,type:str]
+    VIP: ENC[AES256_GCM,data:BSAnzwY7hsz3iR8=,iv:sXs0pXc9O0nSi4IBepPwgBd9HNwBOWfj9/nO+XfXktw=,tag:AOOKGbk92Pj+xgajrDUJJA==,type:str]
+    MASTER1IP: ENC[AES256_GCM,data:zwTyowsUFLAVdgU=,iv:14eTy53QR7IpUjSAnuZnmIs2dj8SNZMkMLY/+tGQxiU=,tag:h8NHTFGLmLID5YpUHWBF6w==,type:str]
+    GATEWAY: ENC[AES256_GCM,data:OroChA8ygn1Gbg==,iv:8/Qzk4YpM36y9oPli5jeuWn4T4TsVFJYetkUgJTHCc4=,tag:kZbBDePwuKUZKOOKd1FgpA==,type:str]
+    #ENC[AES256_GCM,data:et2/pZ0reTI9v+GxOq8Q,iv:Ye3p5mOH3RwEgak9Wwdb1NhpUT/nelNqi2430wDBjbQ=,tag:butH9/Kydj80hnP4q/5WNQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:S2o6aCIzCKuSdpl4C5HjVIYawyKdot2MLg==,iv:AmDb1geCSbt/90J3WNxaEahfKEDeYnczdZ2RQ5x8Ur8=,tag:FnNxY6esHQZh2osCDbXIWw==,type:str]
+    #ENC[AES256_GCM,data:uEsuP48SgVYbRkERl7Ax/ngBb4V/JvxFXA==,iv:+3YXP7nX4k9lih/6f5ldB+fgLwJXrD06tnjQZDvQHOA=,tag:SzWjp1rKhSt4NefYcsMDlQ==,type:comment]
+    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:b/BngdGrLwdhWwuw,iv:zhR0z2X88W7u381labGawMXb9QM//W4HOBt3Op8zYt0=,tag:6uXpHyPMXQn5O3nvNQdQhg==,type:str]
+    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:cpwN6PWgfl/No5pe,iv:2Dcru8XQ5Cmhkl3G7k+acW/01EcPCNBmxSs67Qaaskw=,tag:YbDeC0B/LnkpISS7H9XtFA==,type:str]
+    IP_WHITELIST: ENC[AES256_GCM,data:KNaiXySI5aN8SZTBoO32Zd7CDhaJm5H3STc=,iv:fl99BcFbW11aFV79aH2C+ZqzdFOn5o8QhhrRgqpkk2E=,tag:bZifP3xIGrH2OlgLbgWF1g==,type:str]
+    BLOCKY_IP: ENC[AES256_GCM,data:2IG8+IAh9Q9YT2Ri,iv:r+f10VW9JXrehiAXUe1wRWWfsex0E9AmzAaGBsxomr0=,tag:0C3nQ0kIkFNVWrSlwS10Eg==,type:str]
+    DASHBOARD_IP: ENC[AES256_GCM,data:+7lhEDyy8Jjls5b5,iv:kN6FOw12Z1Lg1I8qhDF9q3FlNIow2jbJS61WZGQsMPI=,tag:GFsKzZz7Ed4WNAGKwx91vQ==,type:str]
+    WG_EASY_IP: ENC[AES256_GCM,data:q4e5KpoCiuBsuteL,iv:/JgDjWe4Gfn52IA33rGmK44ASKAtEM2wijcRFya7UY4=,tag:MzZBFo2NxtXBHtRvzTnN2Q==,type:str]
+    MINECRAFT_IP: ENC[AES256_GCM,data:gA0VRg/MotyoVr0A,iv:vKdoaoceghm8Hmi+UWcUwWN6IXK2tccQpKL78JmSKxE=,tag:jjx2ZBQCISRoUfaOyC9r3Q==,type:str]
+    #ENC[AES256_GCM,data:9ktGsfKl+o8DaRk/Etr5L+TG,iv:gSbQU8w2B9Df9ZX8bVoSYj0AENnD9pZRNxlyLhPs8XQ=,tag:PpaUGBBqgQgSNGKdaDrBdA==,type:comment]
+    BOREALIS_IP: ENC[AES256_GCM,data:O4j8OzCd0DTgmwM=,iv:wjWZ3ixLuvDoqHXUhLAXaoWCIXokIFAI9hySObS2ge4=,tag:1580l2xOWmjZIO1iZKVYdA==,type:str]
+    #ENC[AES256_GCM,data:s8ez/WAFw0lu2w6pKsstXA==,iv:tYdQUQgqJSr/dT/jKUMhjHzP8ifGjp+hY8VjywpzrLk=,tag:KwWG2ASCnMSJT7KdDsswXg==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:P2hhNkvy4MDWhg0e7A==,iv:sfKWKYIlYyxgq0VkP0XO0sSAWXMJ3ub2VPH6c7I+ue8=,tag:UnH4JY/Z7MVyKTskNUBIbg==,type:str]
+    DDNS_URL: ENC[AES256_GCM,data:nNeXVip+5taz8lMk/y1GhbjBbVg=,iv:lpQAbe2HguYagZcrI3vG0cEGiGG9PpDbMs0KZOd5/gE=,tag:qLYmjmvWJhkMzNb4+iIxKQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:SGcUf2I6g9ILjMe+NIC8tdHwAw==,iv:gzsaTQkN9qx/DJAqebfx8auOzDc7SuQVzAh5XYFlYvg=,tag:Bij1xqfbZrQZAAaVqo2RdQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:lblNhyX+KOAcfrWg3alvuzSbkNfQIbzJ7YH6+otTW14HRQzhSPKoBA==,iv:Ri7x+NagI0YJTD1vrHZAIsF1uhQziUPdPJHUY+DZBxE=,tag:rKn1vM/hnsP4R1XCzm6drw==,type:str]
+    ZONE_ID: ENC[AES256_GCM,data:g64sarwnpbeiJr/XWK/x+I1ISEoNZa9A1MyAZS/MKSc=,iv:+41mD1VOAUvuoi5lXeLDKN6tMXoeQiR6nGSyG/bsnTI=,tag:bS/xtLDkf6CNZIirkencQw==,type:str]
+    #ENC[AES256_GCM,data:A4WEDXhjHhE=,iv:MM5NptO2P42qJxW9Rvl41rWVc81SQy3amzghIAXp9Y8=,tag:MA9PIvLAfhpG3KQ85/aQww==,type:comment]
+    GF_ADMIN: ENC[AES256_GCM,data:/XXlIgsxoslG,iv:mmC6CZfAy7x6jBGPPfU95vU318yKDZl4oNsJcIrckAs=,tag:U4pAOkQxJOud9cYy2iBRXA==,type:str]
+    GF_PWD: ENC[AES256_GCM,data:eoVm3/H20kdx3NtfKQm5Yv1E8/7mQ0OO,iv:JSXcgt/I0dI71g87B8OctJeRxgNTcq3WoPxsmEpx2OE=,tag:DdiubGE261J7YavhS6NSpg==,type:str]
+    #ENC[AES256_GCM,data:cqudf++Fsy5ZqA==,iv:6HM0+T/+8cUB3mAGuzVhMaxdnyNE9zeYzX47WjoGHiY=,tag:sfVSJ8WEqTD5sKZcUKnHyw==,type:comment]
+    NEXTCLOUD_USER: ENC[AES256_GCM,data:+58Q+j4+s3nF,iv:xOvwzc7GjGg1lY74bUnx9adq9a/h53YKSdMRMuQlarM=,tag:N7e3ikHvQUSan0aZQAOtbA==,type:str]
+    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:uuPox1VStlGNm+dHi2BoA3+NdkI=,iv:gq8muTu5TFXOE4eR83YN22CzROu3FNDTdKr1GRbOjx4=,tag:+q8kH6vOvVa1XLf/Law+Xg==,type:str]
+    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:r0gwC+ZiZF6d2AtoKjXwHGWepRsZiWFD,iv:AcE5g3ZqUx+gmgK8tgOf68Solz1c8DswKkK5Rej/iYI=,tag:jrdwXLsYgmAX38qzgrU3eQ==,type:str]
+    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:qyQLYQ74d9bBJBPHsmv9PwCsNw==,iv:rM0FQRasU7P0645y1x5GhC55KXAcyGqwO0j9gOhOBm8=,tag:oJcSbQQcfrgdZYV6DArfVg==,type:str]
+    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:E0pmcaAdsotgoN3ZSx1BNUXP,iv:eR58lyMyumMVIL2hL1m1jXOK1tIoAQ1DmgnHHM6DIpE=,tag:Djc3DeFD5h76eJDjP22Wkg==,type:str]
+    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:D16p2MhkZDpkTk0S3iR9zi5lbCqPoBA=,iv:qDkYCtsejwtGz/rL4qjC5n3oTwq3CxIVcf745vte2ZY=,tag:uQxgxNDxwtmMmrwcTpuz6Q==,type:str]
+    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:4NvasiqqxBuzE/uIO+tUJlUiPYrHgxls,iv:NupbRkjtQcaTRVotvx6Oa59inXLH6bw8lATszfI1PX0=,tag:kus9+tee5c+bVN5s1VrDcA==,type:str]
+    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:Y2JIMS8YY4uWjbGSRlXMhsjOXgMeB9OY,iv:TdC9q2zJ7/BpW/X7kJdlOzYDD3WUwin9gu3Ifv0PkkI=,tag:Fd2uYqlYbEG/JAOTXHh6xw==,type:str]
+    #ENC[AES256_GCM,data:s2HNZIZLhqPClPgyYcqU6ac=,iv:30f5jKPInJdMAaBSMaLB8vr+sKBxzh5UQl1mkmKKUr8=,tag:bIPL9x6j1jvGgCpsns2x3A==,type:comment]
+    METUBE_NFS_PATH: ENC[AES256_GCM,data:S8e9RBb59jBVnkQF6z6xAX8B+3v7fIvwDeI=,iv:0Y7/8QhLzPfcU2WdkquQQcd8ggOJo64aA3PkknVP7No=,tag:1Py+AmPEmL8mtYY64L7Pcw==,type:str]
+    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:eOYU1gxBPUQPw/R41l5pjY13PaWqAfufFn0MFMrnIucM+4KeW2eG,iv:MMqT54hNm4X7zuZdLKV38Fkg5udGIPh4Ibzkvgaq+U8=,tag:FG0CUjAOrsWG+YoyoIuxFw==,type:str]
+    OZRATES_NFS_PATH: ENC[AES256_GCM,data:s95Z7n8k7zpLPYC5cdYJnjHfq8ukbR26l6QVSss=,iv:Mg/Gtu8wnbrGkrQjpEK9R53UPD75pST8Dl2GUmpubuI=,tag:BVvNlaGPjXsLlro4H29KZw==,type:str]
+    #ENC[AES256_GCM,data:tlVvNsdtLLNTV3g33wibFylwz/1C2Kd2JV6cwGdXMH3F91KujDmThWHDp/k0NaOgNTc4BtJE5+s=,iv:DbC7WvP/O2xrmf9T4M64AccllMUhQklBLV40U1tkCI0=,tag:LPKk+y94M+QULfGGeGtqOA==,type:comment]
+    #ENC[AES256_GCM,data:PE1dJ+g7ditUW00rvoqS7pGG0ohWf3k+0w==,iv:LDv8zy4Vo4CorTguVz+M20kzkvw3hnhtnSG8FZ4KaYo=,tag:hYIzvdBHlHVAwGYnP4FhRw==,type:comment]
+    #ENC[AES256_GCM,data:TRUaORzoQYDpmYo7z9lyUNcYxMzI24P2k6ROPhxP2C8hnSdxgjUnQv/5cZcbsznmJe2VfIUVhjaMb3q/k8nlZGRvmkWBL8FcG0MSkwk=,iv:xuGE2S7dJRp06apd69kgMGK9GtnIlIofWuDb7JoYSDQ=,tag:sU1gzUQZ8c8Ba7DxsRfiDA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:9HeYRvpk3Cs8Pbd4C1mpAPe3DwZIpEQ5Bp6OZ9MDLSnBGtjYfVmMONjgww==,iv:qyr223xjg1fwu3Am9ExVMtXPi4P5DLPc9wqthNx3NAw=,tag:/OXDoDzy/w80TYnnz1iibA==,type:str]
+    #ENC[AES256_GCM,data:NEinEactmMhwa72badyTp+Lx20dtZ3TzTipvtXpditLwtSQ40c09pgjeTDs03Go8tNOvKUKO92lol8WrVFfFJQOm5aOFyL4=,iv:/68YLI2qXNVvxsJ7RVpCx2iZvKExH6PlCtyxNaQc2BU=,tag:xVI+apOWjwVHOtm6yIiZsw==,type:comment]
+    #ENC[AES256_GCM,data:jUepugONKnwutDzJdBux1nb/YLOBdb+dSM3P29LU8kbyIloZpJsCsZkjsgLR2/ai/z5B4wwS,iv:4oUNJxsYWzR5RldzxZEAr0tCmTrskUsuXNahQ35CnRQ=,tag:t/E9HZCaHl2BjmTHDzE+iw==,type:comment]
+    #ENC[AES256_GCM,data:pELIDP1nWRhfOnl3jtptzxjNH1YLmkGrEaCS2Qc9an6AHyg=,iv:fspKQNjh2Jv+tM9RSF3EtPFA7enkpEGBiu7HFLfh/HE=,tag:d6WccUFKVXOKerx+L1Krgw==,type:comment]
+    #ENC[AES256_GCM,data:i2esgMbqhpOIH3kuCIzdkGUhBiqiK0P7y/Ol7MTa+XYbNE9sW59h,iv:pkrEhg8cnhZqUypC/cAcTVeiew5YijrDr0vYk8X2nVg=,tag:IHCK+OxffqgLrUIzN24shw==,type:comment]
+    #ENC[AES256_GCM,data:ZGWncVX8WX6RsoNHvwc=,iv:B/h3qsiC2eZZx7Dkmzu4oBumFS00by29kcdqtmYYLRM=,tag:7S/zR3sL7chV8vmG41NZGA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:4qMjOmaUj2KFCcR76w==,iv:YH7cAoFzWn1WjP80bWTnMD/0GGPzqAp9pYhYR8I7T3g=,tag:VvAZoHEmVNbjLlJlO4SfpQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:vomR6tK3f/IzfwWdBg==,iv:MU7m5NG2ztqoymAYVLAEMubPMyv0vRIEJ47UGwepwJw=,tag:fnpaRoShhz6sF3XkmACHeQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:fzLNmQ==,iv:uFFgkFOtjZSP9qZRXIaAmgu7oFm9iRC5BuP8zLE90e4=,tag:dQuygUwdjSupDjNsyVUZxw==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpTjhKY2JyeTRaeFYwanl6
-            SEs0aU1nNzBVdGhQcnVQTFVXVDRMN2hlODBJCm0yOUs4elgySG9WUk5PTGEwSzFk
-            R3dyZkFpMWJUUDhVYXVpazdrZGlIazAKLS0tIEZvN1NGNkp2d3FKeHNpL045SjVo
-            Z0RhRGNRd0tjMUNPV1oxd3BUTDVEMTQK9QaPf185jkkgAvnB6z6lTkXjTTBLpfTS
-            AqscGqXm+TXtFV3H1v+hScoiJsqFDDHOY+aiJkubHoYVBtAIQb6Zdg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXZEN3VTdWQ2phNXlzNmdC
+            MWxCSjV4VHMxUWYzSUovekxsZG0rSXBiSlRRCjRlaHFSa0hOYW9XRFZ0T0RzeTNI
+            NnN0YXNLL2V3WDB3MU9vd2g2U2hCWncKLS0tIGt6M0tRRHZsQjNhODFZUjRMUDFw
+            eDBzOWZkRnhBQWIrYTlCTUZ3QmgrQ2sKu0XqMDC+VMuVYizyRssWnFpy2+3LiO1R
+            h3bFqEJ4XYwqZanjEOMAi475ZVAqbvL0I7VP/nt0FqGZ8t8FWFgJ/Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-17T20:22:40Z"
-    mac: ENC[AES256_GCM,data:6Auq4rLUh8oMp0ZVoTiKrJdUao/mjFjKZbnU2qO45WGUuq7H/zTzUo9RAtAmpNtVOwLAAxOg9cjFzcFiIGF11XjXgox1isGEFHmgHEiAvtlCuKGF+OlrM6NwgyhyLm3IYjAcI7ww5mOM+BjwPtg6h3w+F4LAWrXjsWdXMv/Qk3Y=,iv:BcIiz+xSJoEuYS7/FPEcFWoj5Iz9eqTl4dTx/VAjr2c=,tag:/qSqmUziWqusk2y+/I8iEg==,type:str]
+    lastmodified: "2026-01-17T20:39:04Z"
+    mac: ENC[AES256_GCM,data:DEw7kvQ01v7tR9pAPQ59/9eTwlwGcTC5v6VMXZsbb+Nya910vnKqlhPjEgABBKaPev0pid0qv/1Q/eKgTBomUHY+TqHClh45F7ZOkEP6LdQMnafVven42YjHPZ5P9SMzHFvdU/Vphs86sgjb88ec6Hs93kUFIQY9qH+pODzY4tg=,iv:Dw0yXiS/XxvHpEAgF03J+SL3Osvbdhb8CVMA2bq6V5c=,tag:RV8K+yfwr0GCId+VbnkYjw==,type:str]
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.10.2
