--- a/clusters/main/talos/talconfig.yaml
+++ b/clusters/main/talos/talconfig.yaml
@@ -41,17 +41,17 @@ nodes:
               gateway: ${GATEWAY}
           vip:
             ip: ${VIP}
-      schematic:
-        customization:
-          systemExtensions:
-            officialExtensions:
-              - siderolabs/util-linux-tools
-              - siderolabs/iscsi-tools
-              # - siderolabs/nonfree-kmod-nvidia-lts
-              # - siderolabs/nvidia-container-toolkit-lts
-      patches:
-        # - '@./patches/nvidia.yaml'
-        - '@./patches/gc.yaml'
+      # schematic:
+      #   customization:
+      #     systemExtensions:
+      #       officialExtensions:
+      #         - siderolabs/util-linux-tools
+      #         - siderolabs/iscsi-tools
+      #         - siderolabs/nonfree-kmod-nvidia-lts
+      #         - siderolabs/nvidia-container-toolkit-lts
+      # patches:
+      #   - '@./patches/nvidia.yaml'
+      #   - '@./patches/gc.yaml'
 controlPlane:
     patches:
         - '@./patches/controlplane.yaml'
